sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var L = getNombreValeurs()
  var v = 0
  for (i <- 1 to L-1){
    var k = i
    v = getValeur(i)
    while (plusPetit(k-1,k) && k>0) {
      echange(k-1,k)
      if 
      k=k-1
    }
    setValeur(k,v)
  }
}